Fixed according to client's opinions and improved visibility

--- a/style/style.css
+++ b/style/style.css
@@ -232,3 +232,7 @@
     padding-right: 0.5rem !important;
     padding-left: 0.5rem !important;
 }
+
+.w-90{
+    width: 82%;
+}
